Modificacion boton contacto

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </ul>
                 </li>
                 <li><a href="#"><span class="icon-accessibility"> </span>sobre mi</a></li>
-                <li ><a href="#" id="contacto"><span class="icon-address-book"> </span>contacto</a></li>
+                <li ><p id="contacto"><span class="icon-address-book"> </span>contacto</p></li>
             </ul>
         </div>
     </header>
